# enem-llm-benchmark

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: models.yaml
data/: README.md
docs/: _config.yml  erros_comentados.md  index.md
notebooks/: analise.ipynb
results/: imagem_2025.csv  multi_ano.csv  resultados.csv
src/enembench/: __init__.py  cache.py  cli.py  dataset.py  normalizacao.py  parsing.py  pdf_enem.py  prompt.py  report.py  runner.py  schema.py  scoring.py
src/enembench/providers/: __init__.py  base.py  fake.py  gemini.py  groq.py  openai_compat.py  openrouter.py
tests/: test_cache.py  test_dataset.py  test_normalizacao.py  test_parsing.py  test_pdf_enem.py  test_prompt.py  test_providers.py  test_report.py  test_runner.py  test_scoring.py
